Fix newline collapse bug on user profile info

--- a/app/assets/stylesheets/profile.css
+++ b/app/assets/stylesheets/profile.css
@@ -47,10 +47,10 @@
 .profile-element {
   background-color: #333;
   color: #fff;
-  display: block;
+  display: inline-block;
   width: auto;
-  margin-bottom: 3px;
-  float: left;
+  margin-bottom: 3px;;
+  padding: 2px;
 }
 
 .edit-button {
